--- a/gb/24/2/5/n14174329.md
+++ b/gb/24/2/5/n14174329.md
@@ -1,33 +1,33 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：股市暴跌 股民愤怒 根源何在？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14174330-7fd102fa91e4776fb275d1eefdb908ee-600x400.jpg" />
 <h6>进入2024年，中国股市哀鸿遍野，A股一路下跌。图为中国股市示意图。(AFP)
 </h6>
 <hr>
 	<p>【大纪元2024年02月07日讯】进入2024年，中国A股一路下跌，沪深京三市超5200只个股下跌，市值从2021年最高点跌掉逾60%，蒸发近2兆美元。</p>
-<p>2月5日开盘不久，上证指数一度跌至2655.09点，2000多档公司股票接近跌停。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%A1%E5%B8%82.md#1">股市</a>惨崩的情景，令许多中国民众绝望。</p>
+<p>2月5日开盘不久，上证指数一度跌至2655.09点，2000多档公司股票接近跌停。股市惨崩的情景，令许多中国民众绝望。</p>
 <h2><strong>股民愤怒</strong></h2>
 <p>有股民写道：“连续六个月下跌，这是第七个月，找个文盲都不会管成这样，就这样还能安然无恙？”“还不引咎辞职？”</p>
 <p>“取消A股还能少一个诈骗平台。”</p>
-<p>马上就是黄历中国新年。有人拟了一幅对联：“千股跌停辞旧岁 万众套牢迎新春”。横批是：“蒙在股里”。</p>
+<p>马上就是黄历中国新年。有人拟了一幅对联：“千股跌停辞旧岁 万众套牢迎新春”，横批是：“蒙在股里”。</p>
 <p>为阻挡股民发泄不满，中共极力屏蔽各个评论区，股民只好涌到美国驻华大使馆一个保护长颈鹿的帖子下留言：</p>
 <p>“苍天啊，这里终于可以说话了，憋死了，天天看官媒都吐了，都是假的。”</p>
 <p>“美国请来解救水深火热的几亿A股股民。”“你们能派几个人过来接手A股吗？他们实在搞不好了。”“他们吃肉吸髓（还）不让你叫唤，甚至还请了戏班唱赞歌。”</p>
-<p>“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%A1%E5%B8%82.md#1">股市</a>不好没关系，可以不玩，但是隔三差五发一些新闻出来吹牛，把人哄进去，再大跌，这是人干的事？”</p>
-<p>“羡慕你们国家开放的氛围，所有人都可以光明正大的批评国家，这更能促进国家的进步和民众的生活改善……而这里只会捂住民众的嘴，不让大家说不好的话，他们永远活在自吹自擂的世界里，我们好悲惨！”</p>
+<p>“股市不好没关系，可以不玩，但是隔三差五发一些新闻出来吹牛，把人哄进去，再大跌，这是人干的事？”</p>
+<p>“羡慕你们国家开放的氛围，所有人都可以光明正大地批评国家，这更能促进国家的进步和民众的生活改善……而这里只会捂住民众的嘴，不让大家说不好的话，他们永远活在自吹自擂的世界里，我们好悲惨！”</p>
 <p>“老爷们吃香喝辣，哪里关心过韭菜的死活。”“没炒股之前我也很爱国，炒股炒出家国仇恨了，也是悲哀。”“这个国，我以后不爱了。”</p>
 <p>“请保护好台湾，我们的现状就是最好的教训。”</p>
 <p>“趁现在民心涣散打过来吧，宁可双输绝不让权贵单赢。”</p>
 <p>在美国驻华大使馆的微博留言遭禁后，股民纷纷涌到印度驻华大使馆微博的留言区、英国驻华使馆微博的留言区发声。</p>
 <p>有股民写道：“中英如果开战，请英国一定要炸了证监会和交易所。”</p>
-<p>对于中共股市一路下滑，有股民直呼：“这是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%A1%E5%85%9A%E5%BE%81%E5%85%86.md#1">亡党征兆</a>。”</p>
+<p>对于中共股市一路下滑，有股民直呼：“这是亡党征兆。”</p>
 <p>曾经的小粉红陈泽鑫，1993年出生，靠炒数字币起家，后投入股市一个亿，却在A股大亏几千万，一夜变“黑”，发帖提出“打倒习近平，打倒共产党”。</p>
 <h2><strong>根源何在？</strong></h2>
 <p>2月5日沪深京股市全线下滑时，台湾的股市重返万八关卡，成交值新台币3277.25亿元。</p>
 <p>为什么中共的股市与台湾的股市相比冰火两重天？</p>
-<p>最关键的原因是，台湾搞的是真正的自由市场经济，市场在资源配置中起决定性作用，台湾的股市是按照国际公认的市场经济法则在运行；而中共搞的不是自由市场经济，而是权力经济，权力在资源配置中起决定作用，中共权力运行的突出特点是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BB%91%E7%AE%B1%E6%93%8D%E4%BD%9C.md#1">黑箱操作</a>，不公开、不公平、不公正。</p>
+<p>最关键的原因是，台湾搞的是真正的自由市场经济，市场在资源配置中起决定性作用，台湾的股市是按照国际公认的市场经济法则在运行；而中共搞的不是自由市场经济，而是权力经济，权力在资源配置中起决定作用，中共权力运行的突出特点是黑箱操作，不公开、不公平、不公正。</p>
 <p>中国著名经济学家吴敬琏曾经讲，中国股市“连赌场都不如”，因为“赌场里面也有规矩，比如你不能看别人的牌”。</p>
 <p>中共的权力是非常任性的，百年中共最突出的一个特点是，为达目的，不择手段。</p>
 <p>不择手段，就包括可以利用权力偷看市场的底牌。一个可以随便看底牌的市场，连赌场都不如，投资人怎么能够有信心？</p>
@@ -35,55 +35,51 @@
 <p>今天的中共一再强调“党是领导一切的”。</p>
 <p>就中共的股市而言，党领导一切体现在：党既当裁判员，又当教练员，又当运动员，党的权力之手伸进股市的所有环节，想怎么割“韭菜”，就怎么割“韭菜”。</p>
 <p>中共害怕资本市场的人有钱之后，政治上要求民主，经济上要求自由，文化上要求多元，而不利于其极权统治，会时不时地把那些在股市上致富的人专门洗劫一番。这是中共操控股市的一个特别手段，即所谓“消灭流动性”。</p>
-<p>财经博主“老蛮频道”2月5日发贴文说：“现在已经确认，从昨天中午开始，证监会已经开始严厉的全面限制机构卖出了。前两个月还只是批份额，允许你今天卖多少他今天卖多少，现在干脆一刀切，把机构操作面板上的‘卖出’键功能撤销了，点卖出无效。”</p>
+<p>财经博主“老蛮频道”2月5日发帖文说：“现在已经确认，从昨天中午开始，证监会已经开始严厉地全面限制机构卖出了。前两个月还只是批份额，允许你今天卖多少他今天卖多少，现在干脆一刀切，把机构操作面板上的‘卖出’键功能撤销了，点卖出无效。”</p>
 <p>“就这种事的荒谬程度，我已经无法用语言描述了。你甚至都不能用‘掩耳盗铃’来形容这件事了。机构卖出，是机构自己想卖出吗？机构的钱又不是自己的钱。现在全国资金大搬家，所有的流动性都被政府债吸空了，原本投给机构炒股的钱也在搬家，各路金主都在赎回资金，转身去投政府债。”</p>
 <p>“甚至绝大多数的资金搬家都是政府强制的，稍微有点规模的金主都被规定了政府债购买量的政治性义务，这事就发生在去年10月底，虽然这属于财政系统和央行层面的事，跟你证监会没啥关系，但是你证监会能假装不知道吗？”</p>
 <p>“金主一定要赎回，机构又不能卖出，怎么办呢？机构直接向金主违约吗？那全国的金融秩序，不就崩盘了吗？这哪里是指数崩盘，这是秩序崩盘！人心崩盘！整个社会秩序全面坍塌的第一步！”</p>
 <p>中共在股市上既当裁判员，又当教练员，又当运动员，是根本违反股市运行的客观规律的。</p>
-<p>其结果是：中共一轮又一轮的“割韭菜”，把投资者的信心全都割没了。外国投资者，能撤的，全都撤了；中国投资者，能撤的，也早撤了；心存侥幸的，在血本无归的重锤之下，也不得不撤；最后，就是金融秩序的崩盘。</p>
+<p>其结果是：中共一轮又一轮地“割韭菜”，把投资者的信心全都割没了。外国投资者，能撤的，全都撤了；中国投资者，能撤的，也早撤了；心存侥幸的，在血本无归的重锤之下，也不得不撤；最后，就是金融秩序的崩盘。</p>
 <h2><strong>结语</strong></h2>
 <p>中共党魁习近平上台11年多，不断地集权。到今天，“集权”已变成“极权”。</p>
 <p>政治上的高度极权与经济上的市场经济是根本对立的。这种对立导致2023年中国出现股市、楼市、汇市、债市“四市齐杀”的局面。</p>
-<p>进入2024年，中共的股市危机、楼市危机、汇市危机、债务危机全部都在深化。这些危机，归结到一点，是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%A1%E5%BF%83%E5%8D%B1%E6%9C%BA.md#1">信心危机</a>。</p>
+<p>进入2024年，中共的股市危机、楼市危机、汇市危机、债务危机全部都在深化。这些危机，归结到一点，是信心危机。</p>
 <p>国外投资者和国内投资者，眼睁睁地看着中共极权不断地折腾经济，把一个一个行业搞垮，而对中共丧失信心。</p>
-<p>这种<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%A1%E5%BF%83%E5%8D%B1%E6%9C%BA.md#1">信心危机</a>发展下去，就是经济危机、政治危机、社会危机的叠加，最后，就是中共极权的瓦解与崩溃。</p>
+<p>这种信心危机发展下去，就是经济危机、政治危机、社会危机的叠加，最后，就是中共极权的瓦解与崩溃。</p>
 <p>大纪元首发</p>
-<p>责任编辑：高义</p>
+<p>责任编辑：高义#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143108.md#1">王友群：2023年预示中共将亡的九个显像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147231.md#1">王友群：中共军方反习的人很多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162842.md#1">王友群：中共谎言再曝光 相信中共的人会被害死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167386.md#1">王友群：中共党魁又被传出病重“谣言”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">SONGMICS 6层大容量珠宝盒 带镜子（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：乐高植物 玫瑰花随愿创意构建 家居装饰 有优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/24/n14143108.md#1">王友群：2023年预示中共将亡的九个显像</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/30/n14147231.md#1">王友群：中共军方反习的人很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/20/n14162842.md#1">王友群：中共谎言再曝光 相信中共的人会被害死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167386.md#1">王友群：中共党魁又被传出病重“谣言”？</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/2/20/n10158455.md#1" target="_blank">林辉：为何“六九届”学生少有成功人士？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14169186.md#1">【未解之谜】紫禁城风水（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14172980.md#1">芬兰男童死后再次转生为前世母亲的儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171693.md#1">【未解之谜】紫禁城风水探秘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172237.md#1">婚姻中“善恶有报”的真实故事（一）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171133.md#1">立春回味节气文明  迎春养生就吃这一盘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172339.md#1">【百年真相】党治香港 现九大灾难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174328.md#1">【舞蹈】飞天大学2023第二学期舞蹈考试 (中班 男生）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14169562.md#1">【环球直击】澳洲华裔作家杨恒均遭中共判死缓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170727.md#1">七种商品或服务 二人家庭在Costco买省钱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143701.md#1">美空军两大支柱 为何对比F-35与F-22是错的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173158.md#1">【一线采访】江苏疫情 一天暴增5000例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174186.md#1">两港星一天内相继骤逝 生前竟同演一幕殓房戏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172833.md#1">王家卫《繁花》剧评：真娱乐假史实争奇斗艳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172824.md#1">刚参演过《新闻女王》 56岁港星郑启泰骤逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174294.md#1">大陆股民美使馆微博留言屡遭删 转战印度使馆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14173860.md#1">席琳狄翁惊现葛莱美 为泰勒丝颁奖 全场欢呼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14140728.md#1">毛囊好才不脱发！中医公开护发秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14159956.md#1">哪些水果对心脏好？中医推荐4种超级水果?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14173907.md#1">马桶水流不止像潺潺小溪 应该如何处理？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159290.md#1">记忆下降是大脑缺镁和锌 这些食物可补充</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173178.md#1">专家透露 何时入住旅馆可获得免费升等</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/5/n14174329.htm">王友群：股市暴跌 股民愤怒 根源何在？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174329.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/2/5/n14174329.htm">王友群：股市暴跌 股民愤怒 根源何在？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/5/n14174329.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
